# maxpy

./: .gitignore  README.md  main.py  pyproject.toml
maxpy/: constants.py  makegif.py  style.py
maxpy/style/: __init__.py  dark.py  nice.py
maxpy/utils/: invert_image.py  makegif.py  vtk_utils.py
