[project]
name = "maxpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "cmasher>=1.9.2",
    "colorspacious>=1.1.2",
    "colour>=0.1.5",
    "h5py>=3.15.1",
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pygments>=2.19.2",
    "pyqt5>=5.15.11",
    "pyvista>=0.46.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "vtk>=9.5.2",
    "yt>=4.4.2",
]
optional-dependencies = [
    "manim",
    "pyaudio",
]
